# sonar

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  flash-test-then-module
firmware/common/: board_definition.cpp  board_definition.h  readings.cpp  readings.h
firmware/module/: CMakeLists.txt  arduino-libraries  dependencies.sd  main.cpp  sonar_hardware.h  sonar_module.cpp  sonar_module.h
firmware/test/: CMakeLists.txt  arduino-libraries  check.cpp  check.h  dependencies.sd  main.cpp
hardware/: SchematicLayout.kicad_wks  _autosave-fk-sonar.kicad_pcb  fk-sonar-cache.lib  fk-sonar-rescue.lib  fk-sonar.bak  fk-sonar.kicad_pcb  fk-sonar.kicad_pcb-bak  fk-sonar.lib  fk-sonar.net  fk-sonar.pro  fk-sonar.sch  fp-lib-table  sym-lib-table
hardware/gerbers/: fk-sonar-B.Cu.gbr  fk-sonar-B.Mask.gbr  fk-sonar-B.Paste.gbr  fk-sonar-B.SilkS.gbr  fk-sonar-Edge.Cuts.gbr  fk-sonar-F.Cu.gbr  fk-sonar-F.Mask.gbr  fk-sonar-F.Paste.gbr  fk-sonar-F.SilkS.gbr  fk-sonar-NPTH.drl  fk-sonar-PTH.drl  fk-sonar.drl
hardware/gerbers/v0.7/: fk-sonar-B.Cu.gbr  fk-sonar-B.Mask.gbr  fk-sonar-B.Paste.gbr  fk-sonar-B.SilkS.gbr  fk-sonar-Edge.Cuts.gbr  fk-sonar-F.Cu.gbr  fk-sonar-F.Mask.gbr  fk-sonar-F.Paste.gbr  fk-sonar-F.SilkS.gbr  fk-sonar-GND.gbr  fk-sonar-PWR.gbr  fk-sonar.drl
hardware/panelized/: fk-sonar-v0.07-03x03.kicad_pcb  fk-sonar-v0.07-03x03.kicad_pcb-bak
hardware/rescue-backup/: fk-sonar-2018-07-23-19-35-59.pro  fk-sonar-2018-07-23-19-35-59.sch  fk-sonar-cache-2018-07-23-19-35-59.lib  fk-sonar-rescue-2018-07-23-19-35-59.lib
(+12 files in other folders)
